# OpenDXA

./: .gitignore  README.md  README_new.md  main.py  pyproject.toml  pytest.ini
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx
core/: burgers_circuit_evaluator.py  classification_engine.py  displacement_field_analyzer.py  lammpstrj_parser.py  lattice_connectivity_graph.py  ptm_local_classifier.py  surface_filter.py
opendxa/: __main__.py
opendxa/analysis/: __init__.py  anisotropy.py  burgers_statistics.py  centroids.py  clustering.py  graph_metrics.py  orientation.py  persistent_homology.py  plane_histogram.py  spacetime.py  tortuosity.py  tracking.py  voxel_density.py
opendxa/classification/: __init__.py  burgers.py  classification_engine.py  cna.py  connectivity.py  delaunay_tesselattor.py  dislocation_core_marker.py  dislocation_line_builder.py  dislocation_line_smoother.py  dislocation_statistics.py  displacement.py  elastic_mapper.py  ptm.py  surface.py
opendxa/core/: __init__.py  analysis_config.py  analyze_timestep.py  connectivity_manager.py  engine.py  gpu_kernels.py  sequentials.py  unified_burgers_validator.py  workflow_steps.py
opendxa/examples/: compare_burgers.py  dislocation_analysis.py  dislocation_tracker.py
opendxa/export/: __init__.py  dislocation_dataset.py  dislocation_tracker.py  exporter.py
opendxa/filters/: __init__.py  burgers_normalizer.py  loop_canonicalizer.py  loop_finder.py  loop_grouper.py
opendxa/kernels/: burgers.py  cna.py  elastic_mapping.py  line_classification.py  neighbors.py  pbc.py  ptm.py
opendxa/neighbors/: hybrid.py
opendxa/parser/: __init__.py  lammpstrj.py
opendxa/tests/: compare_burgers.py  ptm_classifier.py  test_burgers_circuit_evaluator.py  test_burgers_kernel.py  test_cna_classifier.py  test_delaunay_tessellator.py  test_dislocation_core_marker.py  test_dislocation_statistics.py  test_displacement_field.py  (+8 more)
server/: app.py
src/: main.py
utils/: cuda.py
(+312 files in other folders)
