[tool.poetry]
name = "opendxa"
version = "0.1.0"
description = "Open Source Dislocation Extraction Algorithm"
authors = ["rodyherrera <contact@rodyherrera.com>"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.5"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
numpy = "^2.2.6"
cupy-cuda12x = "^13.4.1"
numba = "^0.61.2"
psutil = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
