[tool.poetry]
name = "opendxa"
version = "0.1.0"
description = "Open Source Dislocation Extraction Algorithm"
authors = ["rodyherrera <contact@rodyherrera.com>"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
networkx = "^3.5"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
numpy = "^2.2.6"
cupy-cuda12x = "^13.4.1"
numba = "^0.61.2"
psutil = "^7.0.0"
fastapi = "^0.115.12"
python-multipart = "^0.0.20"
uvicorn = "^0.34.3"
pyqt6 = "^6.9.0"
ovito = "^3.12.4"
scikit-learn = "^1.6.1"
pyvista = "^0.45.2"
pyvistaqt = "^0.11.2"
plotly = "^6.1.2"
ripser = "^0.6.12"
persim = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
